# pure-data

./: .gitignore  CMakeLists.txt
cmake/: build_dependencies.cmake  build_extras.cmake  build_options.cmake  get_config.cmake  get_target_arch.cmake  get_version.cmake  package_config.cmake  system_files.cmake
